# hx-requests

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish_package.yml
docs/: conf.py  index.rst  installation.rst
docs/_templates/python/: module.rst
docs/explanation/: form_hx_requests.rst  how_hx_requests_works.rst  how_hx_tags_serializes_objects.rst  index.rst  modals.rst  object_serialization.rst  refreshing_context_on_post.rst  securing_hx_requests.rst
docs/guide/: blocks.rst  config.rst  delete.rst  faqs.rst  forms.rst  hx_requests.rst  hx_tags.rst  installation.rst  messages.rst  modals.rst  out_of_band.rst  overview.rst  quickstart.rst  startup_guide.rst  tips_and_tricks.rst
docs/how_tos/: access_hx_object_in_template.rst  add_context.rst  add_form_kwargs.rst  add_headers.rst  delete.rst  detect_hx_request.rst  get_params_post_request.rst  index.rst  list_page_with_crud.rst  more_how_tos.rst  mount_on_urls.rst  oob_swap.rst  register_hx_requests.rst  scope_hx_objects.rst  secure_hx_requests.rst  use_messages.rst  use_modals.rst
docs/reference/: BaseHXRequest.rst  DeleteHXRequest.rst  FormHXRequest.rst  HXFormModal.rst  HXModal.rst  HXRequestGET.rst  HXRequestPOST.rst  config.rst  hx_tags.rst  index.rst
docs/superpowers/plans/: 2026-07-08-url-router.md
docs/superpowers/specs/: 2026-07-03-test-suite-design.md  2026-07-07-url-router-design.md
docs/tutorials/: basic_tutorial.rst  form_tutorial.rst  index.rst
hx_requests/: apps.py  checks.py  constants.py  django_views.py  hx_messages.py  hx_registry.py  hx_requests.py  security_utils.py  utils.py  views.py
hx_requests/static/hx_requests/css/: modal.css
hx_requests/templates/hx_requests/: bootstrap_modal.html  messages.html  messages_alerts.html  modal.html
hx_requests/templatetags/: hx_tags.py
tests/: conftest.py  helpers.py  settings.py  test_attributes_unit.py  test_base_hx_request.py  test_checks.py  test_delete_hx_request.py  test_django_views.py  test_form_hx_request.py  test_form_unit.py  test_get_writes.py  test_headers_unit.py  test_hx_tags.py  test_lazy_context.py  test_modal.py  test_modal_unit.py  test_path_binding.py  test_registry.py  test_renderer_unit.py  test_security.py  test_security_utils.py  test_signing.py  test_triggers_unit.py  test_url_router.py  test_utils.py  urls.py  urls_no_router.py
tests/templates/: base_view.html  blocks.html  blocks2.html  current_url.html  form.html  form_success.html  hx_messages.html  hx_modal.html  kwargs.html  list_echo.html  modal_body.html  object.html  post.html  refresh.html  second.html  simple.html  view_flavor.html  widget_context.html  widget_list.html  widget_object.html  widget_update.html
tests/test_app/: apps.py  forms.py  hx_requests.py  models.py  views.py
tests/test_app_two/: apps.py
tests/test_app_two/hx_requests/: widgets.py
tests/test_app_two/hx_requests/nested/: deep.py
